plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'HeathCareSystem.example'
version = '0.0.1-SNAPSHOT'
description = 'Project for HeathCareSystem'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starter
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // SQL Server JDBC driver (hỗ trợ JDK 21)
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.8.1.jre11'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Lombok
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT (phiên bản mới, hỗ trợ Keys.hmacShaKeyFor)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // dùng Jackson để parse JSON

    // ModelMapper
    implementation 'org.modelmapper.extensions:modelmapper-spring:3.0.0'

    // JAXB (dùng nếu cần với JDK 21)
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

}

tasks.named('test') {
    useJUnitPlatform()
}
